--- a/src/screens/Screen404.css
+++ b/src/screens/Screen404.css
@@ -13,5 +13,3 @@ body {
     align-items: center;
 
 }
-
-h1 {}
